Version 0.4
~~~~~~~~~~~
* Post DiFX-2.1
* Add new vdifmux function which takes a multi-threaded VDIF buffer, looks
  for frames with certain threadIds, and multiplexes them into a single-
  threaded output buffer.
* New utilities (mirroring functionality of mark5access utilities):
  - vdifd      (m5d)
  - vdifbstate (m5bstate)
  - vdiffold   (m5fold)
  - vdifspec   (m5spec)
* Inlinification and constification of many VDIF header access functions
* Large file clean (I think) now...

Version 0.3
~~~~~~~~~~~
* Version for DiFX-2.1, May 4, 2012

Version 0.2
~~~~~~~~~~~
* Post DiFX-2.0.0
* Ability to make RPM files
* Version for DiFX-2.0.1, June 10, 2011

Version 0.1
~~~~~~~~~~~
* Initial implementation of vdifio
* Serves multiple VDIF threads from one source to multiple sinks
* Version for DiFX-2.0.0